# huberman_chat

./: .gitignore  CODEBASE_ANALYSIS.md  GEMINI.md  LICENSE  README.md  add_chapter_ids.py  changes.md  chapter_timestamp_validators.py  create_qdrant_index.py  gemini_chat_completion.py  logging_config.py  main.py  pydantic_models.py  pyproject.toml  question_generation.py  yt_chapters_extraction.py
.gemini/: CHANGES.md  CODEBASE_ANALYSIS.md  GEMINI.md
.gemini/planning/: hybrid_retrieval_reranking_plan.md  qdrant_hybrid_search_examples.md
.gemini/session_summaries/: 2025-07-28_09-49-22_summary.md  2025-07-28_end_of_day_summary.md  2025-07-29_summary.md
code_snippets/fast_embed/: fastembed_examples.py
code_snippets/qdrant/: 01_create_collection.py  02_insert_data.py  qdrant_examples.py
prompts/chapters_extractor_prompts/json_chapters/: system_prompt.md  user_prompt.md
prompts/chapters_extractor_prompts/xml_chapters/: system_prompt.md
prompts/question_creation_prompts/: system_prompt.md  user_prompt.md
session_summaries/: 2025-07-27_summary.md  2025-07-28_07-01-12_summary.md
tests/: test_create_qdrant_index.py
